# Margarita-Test

./: .gitignore
margarita/: CMakeLists.txt  Readme.txt  marg.cc  plotstoppingmuons.C
margarita/include/: MargaritaActionBeam.hh  MargaritaDetectorConstruct.hh  MargaritaPrimaryGenerator.hh  MargaritaSteppingAction.hh  MargaritaTrackingAction.hh
margarita/macros/: run.mac
margarita/src/: HistoManager.cc  MargaritaActionBeam.cc  MargaritaDetectorConstruct.cc  MargaritaPrimaryGenerator.cc  MargaritaSteppingAction.cc  MargaritaTrackingAction.cc
margaritathree/: CMakeLists.txt
margaritathree/include/: HistoManager.hh  MargaritaRunAction.hh  MargaritaSteppingAction.hh
margaritathree/macros/: run.mac
margaritathree/src/: HistoManager.cc  MargaritaActionBeam.cc  MargaritaDetectorConstruct.cc  MargaritaRunAction.cc  MargaritaSteppingAction.cc
